crates/wdl-ast/tests/validation/duplicate-command/source.wdl
# This is a test of too many command sections in a task.

version 1.1

task test {
    command <<<>>>
    command <<<>>>
}
